--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "pdf-parse": "^1.1.1",
